--- a/vol02/css/epub.css
+++ b/vol02/css/epub.css
@@ -31,6 +31,7 @@ header {
 }
 .poem-subtitle {
     margin-top: 0;
+    text-indent: 0;
 }
 .poem-author {
     text-align: right;
